syntax = "proto3";

import "google/protobuf/empty.proto";

package writer;

option go_package = "github.com/VadimGossip/calculator/dbagent/api/grpcservice/writergrpc";

message Expression {
  int64 id = 1;
  string reqUid = 2;
  string value = 3;
  double result = 4;
  string state = 5;
  string error = 6;
  int64 createdAt = 7;
  int64 evalStartedAt = 8;
  int64 evalFinishedAt =9;
}

message SubExpression {
  int64 Id  = 1;
  int64 expressionId = 2;
  double val1 = 3;
  double val2 = 4;
  int64 subExpressionId1 = 5;
  int64 subExpressionId2 = 6;
  string operation = 7;
  uint32 operationDuration = 8;
  bool isLast = 9;
}

message HeartbeatRequest {
  string agentName = 1;
}

message StartEvalRequest {
  int64 seId = 1;
  string agent = 2;
}

message StartEvalResponse {
  bool success = 1;
}

message StopEvalRequest {
  int64 seId = 1;
  double result = 2;
  string error = 3;
}

message ReadySubExpressionsRequest {
  int64 eId = 1;
  uint32 skipTimeoutSec = 2;
}

message ReadySubExpressionsResponse {
  repeated SubExpression SubExpressions = 1;
}

message ExpressionByReqUidRequest {
  string reqUid = 1;
}

message CreateExpressionRequest {
    Expression e = 1;
}

message CreateExpressionResponse {
  int64 id =1;
}

message CreateSubExpressionRequest{
  SubExpression se = 1;
}

message CreateSubExpressionResponse {
  int64 id = 1;
}

message GetExpressionsResponse {
  repeated Expression expressions = 1;
}

message Agent {
  string name = 1;
  int64 createdAt = 2;
  int64 lastHbAt = 3;
}

message GetAgentsResponse {
  repeated Agent agents = 1;
}

message OperationDuration {
  string name = 1;
  uint32 duration = 2;
  int64 createdAt = 3;
  int64 updatedAt = 4;
}

message CreateOperDurRequest {
  string name = 1;
  uint32 duration = 2;
}

message GetOperDurResponse {
  repeated OperationDuration operationDurations = 1;
}

message SkipAgentSubExpressionsRequest {
  string agentName = 1;
}

service WriterService {
  rpc Heartbeat(HeartbeatRequest) returns(google.protobuf.Empty);
  rpc StartEval(StartEvalRequest) returns(StartEvalResponse);
  rpc StopEval(StopEvalRequest) returns(google.protobuf.Empty);
  rpc GetReadySubExpressions(ReadySubExpressionsRequest) returns(ReadySubExpressionsResponse);
  rpc GetExpressionByReqUid(ExpressionByReqUidRequest) returns(Expression);
  rpc CreateExpression(CreateExpressionRequest) returns(CreateExpressionResponse);
  rpc CreateSubExpression(CreateSubExpressionRequest) returns(CreateSubExpressionResponse);
  rpc GetExpressions(google.protobuf.Empty) returns(GetExpressionsResponse);
  rpc GetAgents(google.protobuf.Empty) returns(GetAgentsResponse);
  rpc SaveOperationDuration(CreateOperDurRequest) returns(google.protobuf.Empty);
  rpc GetOperationDurations(google.protobuf.Empty) returns(GetOperDurResponse);
  rpc SkipAgentSubExpressions(SkipAgentSubExpressionsRequest) returns(google.protobuf.Empty);
}